k8s/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inventory-management-ingress 
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  rules:
  - host: padma-inventory-management
    http:
      paths:     
      - backend:
          serviceName: server-cluster-ip-service
          servicePort: 5000
        path: /inventory(/|$)(.*)
